# tamagotchai

./: AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt
ai_health_board/: __init__.py  cache.py  config.py  input.py  logging_setup.py  models.py  scheduler.py  wifi_display_hook.py
ai_health_board/display/: __init__.py  base.py  mock_png.py  waveshare_2in13.py  waveshare_2in13_v1.py  waveshare_2in13_v2.py  waveshare_2in13_v3.py  waveshare_2in13_v4.py  waveshare_2in13b_v3.py  waveshare_2in13b_v4.py  waveshare_2in13bc.py  waveshare_2in13d.py  waveshare_2in13g.py
ai_health_board/providers/: __init__.py  base.py  statuspage.py
ai_health_board/render/: __init__.py  layout.py  theme.py
ai_health_board/screens/: __init__.py  (+4 more)
cache/: status.json
commands/: __init__.py  init.py
config/: display.yml  display.yml.example  providers.yaml  providers.yaml.example  screens.yml  screens.yml.example  tamagotchai.yml  tamagotchai.yml.example
core/: config.py  wifi_display_hook.py
scripts/: doctor.sh  install.sh  install_services.sh  pisugar_button.py  prepare_image.py  preview_all.py  preview_screen.py  run_once.sh
systemd/: ai-health-board.service  pisugar-button.service  tamagotchai.service
templates/: default-agent-feed.yml  default-device-status.yml  default-opencode.yml  default-status-board.yml  default-tamagotchi.yml
tests/: test_config.py  test_input.py  test_layout.py  test_new_modules.py  test_statuspage_provider.py  test_ui_image_tools.py  test_ui_layout.py  test_ui_templates.py
ui/: __init__.py  canvas.py  fonts.py  formatters.py  layout.py
(+54 files in other folders)
